generic damage for weapons

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -153,14 +153,14 @@
                 </span>
                 <div class="spell-bottom-row">
                     <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Exorcism">
-                    <img class="spell-type-image image-projectile" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/projectile.svg" title="Projectile">
-                    <img class="spell-type-image image-area" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/area.svg" title="Area">
-                    <img class="spell-type-image image-living" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/living.svg" title="Living">
-                    <img class="spell-type-image image-bind" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/crossed-chains.svg" title="Binding">
-                    <img class="spell-type-image image-recover" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/doubled.svg" title="Spirit Flow">
-                    <img class="spell-type-image image-barrier" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/shield-reflect.svg" title="Barrier">
-                    <img class="spell-type-image image-stealth" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/ninja-mask.svg" title="Stealth">
-                    <img class="spell-type-image image-exorcism" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/pentagram-rose.svg" title="Exorcism">
+                    <img class="spell-type-image image-projectile" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/projectile.svg" title="Projectile">
+                    <img class="spell-type-image image-area" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/area.svg" title="Area">
+                    <img class="spell-type-image image-living" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/living.svg" title="Living">
+                    <img class="spell-type-image image-bind" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/crossed-chains.svg" title="Binding">
+                    <img class="spell-type-image image-recover" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/doubled.svg" title="Spirit Flow">
+                    <img class="spell-type-image image-barrier" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/shield-reflect.svg" title="Barrier">
+                    <img class="spell-type-image image-stealth" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/ninja-mask.svg" title="Stealth">
+                    <img class="spell-type-image image-exorcism" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/pentagram-rose.svg" title="Exorcism">
                     <input type="hidden" class="spell-damage-type" name="attr_DamageType" value=""/>
                     <select class="spell-damage" name="attr_damage_type">
                         <option style="color:#D4111C" value="Fire">Fire</option>
@@ -177,7 +177,7 @@
                     <input type="hidden" name="attr_Cost" value="0 Hand"/>
                     <input type="text" class="line-noninput spell-cost" name="attr_cost_num" value="" />
                     <input type="hidden" class="spell-cost-display" name="attr_cost_type" value="">
-                    <img class="spell-cost-image image-hand" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/spock-hand.png" title="Hand Seals">
+                    <img class="spell-cost-image image-hand" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/spock-hand.png" title="Hand Seals">
                     
                 </div>
                 
@@ -203,10 +203,10 @@
                 </span>
                 <div class="spell-bottom-row">
                     <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Living">
-                    <img class="spell-type-image image-projectile" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/projectile.svg" title="Projectile">
-                    <img class="spell-type-image image-area" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/area.svg" title="Area">
-                    <img class="spell-type-image image-living" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/living.svg" title="Living">
-                    <img class="spell-type-image image-bind" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/crossed-chains.svg" title="Binding">
+                    <img class="spell-type-image image-projectile" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/projectile.svg" title="Projectile">
+                    <img class="spell-type-image image-area" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/area.svg" title="Area">
+                    <img class="spell-type-image image-living" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/living.svg" title="Living">
+                    <img class="spell-type-image image-bind" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/crossed-chains.svg" title="Binding">
                     <input type="hidden" class="spell-damage-type" name="attr_DamageType" value=""/>
                     <select class="spell-damage" name="attr_damage_type">
                         <option style="color:#D4111C" value="Fire">Fire</option>
@@ -222,11 +222,11 @@
                     <input type="hidden" name="attr_Cost" value="0 Metal"/>
                     <input type="text" class="line-noninput spell-cost" name="attr_cost_num" value="" />
                     <input type="hidden" class="spell-cost-display" name="attr_cost_type" value="">
-                    <img class="spell-cost-image image-fire" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/candlebright.png" title="Fire Talismans">
-                    <img class="spell-cost-image image-water" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/water-drop.png" title="Water Talismans">
-                    <img class="spell-cost-image image-earth" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/peaks.png" title="Earth Talismans">
-                    <img class="spell-cost-image image-metal" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/anvil.png" title="Metal Talismans">
-                    <img class="spell-cost-image image-wood" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/beech.png" title="Wood Talismans">                    
+                    <img class="spell-cost-image image-fire" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/candlebright.png" title="Fire Talismans">
+                    <img class="spell-cost-image image-water" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/water-drop.png" title="Water Talismans">
+                    <img class="spell-cost-image image-earth" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/peaks.png" title="Earth Talismans">
+                    <img class="spell-cost-image image-metal" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/anvil.png" title="Metal Talismans">
+                    <img class="spell-cost-image image-wood" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/beech.png" title="Wood Talismans">                    
                 </div>
                 <div class="spell-notes">
                     <textarea class="spell-t-notes-input" name="attr_Info" placeholder="Notes"></textarea>
@@ -241,31 +241,31 @@
     <div class="traits-section">
 		<span class="current-talismans" >Current &nbsp;&nbsp;&nbsp;&nbsp; Max</span>
 		<div class="fire-talismans">
-			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/candlebright.png" >
+			<img class="symbol-small" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/candlebright.png" >
 			<input type="number" name="attr_fire_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_fire_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="water-talismans">
-			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/water-drop.png" >
+			<img class="symbol-small" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/water-drop.png" >
 			<input type="number" name="attr_water_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_water_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="metal-talismans">
-			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/anvil.png" >
+			<img class="symbol-small" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/anvil.png" >
 			<input type="number" name="attr_metal_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_metal_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="wood-talismans">
-			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/beech.png" >
+			<img class="symbol-small" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/beech.png" >
 			<input type="number" name="attr_wood_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_wood_capacity" class="talisman-capacity" value="20" />
 		</div>
 		<div class="earth-talismans">
-			<img class="symbol-small" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/peaks.png" >
+			<img class="symbol-small" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/icons/peaks.png" >
 			<input type="number" name="attr_earth_current" class="talisman-capacity" value="20" />
 			<span>/</span>
 			<input type="number" name="attr_earth_capacity" class="talisman-capacity" value="20" />
@@ -468,7 +468,7 @@
               </div>
               <input name="attr_health_head_percent" type="hidden" value="100">
             </div>
-            <img class="health-body" src="https://github.com/TheScottishninja/Onmyoji/raw/main/body_solid.png">
+            <img class="health-body" src="https://raw.githubusercontent.com/TheScottishninja/Onmyoji/main/body_solid.png">
         </div>
         <div class="social-box">
             <h3 class="traits-header">Injuries</h3>
