--- a/character_sheet.html
+++ b/character_sheet.html
@@ -306,7 +306,7 @@
             <div class="move-box stats-box">
                 <label class="stat-label">Movement</label>
                 <input type="hidden" name="attr_Move_reduce" class="stat-input" value="0" />
-                <input type="hidden" name="attr_Move" class="stat-input" value="floor((20+5*@{Agility})*(1 - @{Move_reduce}))" />
+                <input type="hidden" name="attr_Move" class="stat-input" value="20" />
                 <input type="number" name="attr_Move_label" class="stat-input" step="1" value="@{Move}" disabled />
             </div>
             <div class="hsmod-box stats-box">
