--- a/character_sheet.html
+++ b/character_sheet.html
@@ -343,7 +343,7 @@
                     <textarea class="tooltiptext" name="attr_WeaponTypeTip" placeholder="This is the property associated with the weapon type." >
                     </textarea>
                 </div>
-                <button name="roll_equip_weapon" class="equip-button" type="roll" value="EquipWeapon;;@{WeaponName}">
+                <button name="roll_equip_weapon" class="equip-button" type="roll" value="!EquipWeapon;;@{WeaponName};;@{RowID}">
                     <span name="attr_WeaponEquip"></span>
                 </button>
 
@@ -353,7 +353,7 @@
                         <input type="text" class="attack-input line-input" name="attr_BasicAttackName" value="Attack" />
                         <input type="text" class="attack-damage line-input" name="attr_BasicAttackDamage" placeholder="1d6" />
                         <input type="text" class="attack-cost line-input" name="attr_BasicAttackCost" placeholder="" />
-                        <button name="roll_attack" class="attack-button" type="roll" value="WeaponAttack;;"></button>
+                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;"></button>
                     </div>
                     <input class="arrow-toggle" type="checkbox" />
                     <span class="arrow-label">&#9658;</span>
@@ -372,7 +372,7 @@
                         <input type="text" class="attack-input line-input" name="attr_ToggleAttackName" value="Toggle" />
                         <!-- <input type="text" class="attack-damage line-input" name="attr_AttackDamage" placeholder="1d6" /> -->
                         <input type="text" class="attack-cost line-input" name="attr_ToggleAttackCost" placeholder="" />
-                        <button name="roll_attack" class="equip-button" type="roll" value="ToggleAbility;;@{ToggleAttackName}">
+                        <button name="roll_attack" class="equip-button" type="roll" value="!ToggleAbility;;@{ToggleAttackName}">
                             <span name="attr_ToggleState"></span>
                         </button>
                     </div>
@@ -392,7 +392,7 @@
                         <input type="text" class="attack-input line-input" name="attr_BurstAttackName" value="Attack" />
                         <input type="text" class="attack-damage line-input" name="attr_BurstAttackDamage" placeholder="1d6" />
                         <input type="text" class="attack-cost line-input" name="attr_BurstAttackCost" placeholder="" />
-                        <button name="roll_attack" class="attack-button" type="roll" value="WeaponAttack;;burst"></button>
+                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;burst"></button>
                     </div>
                     <input class="arrow-toggle" type="checkbox" />
                     <span class="arrow-label">&#9658;</span>
