toggle and equip buttons in api

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -372,7 +372,7 @@
                         <input type="text" class="attack-input line-input" name="attr_ToggleAttackName" value="Toggle" />
                         <!-- <input type="text" class="attack-damage line-input" name="attr_AttackDamage" placeholder="1d6" /> -->
                         <input type="text" class="attack-cost line-input" name="attr_ToggleAttackCost" placeholder="" />
-                        <button name="roll_attack" class="equip-button" type="roll" value="!ToggleAbility;;@{ToggleAttackName}">
+                        <button name="roll_attack" class="equip-button" type="roll" value="!ToggleAbility;;@{ToggleAttackName};;@{RowID}">
                             <span name="attr_ToggleState"></span>
                         </button>
                     </div>
