equipping and toggle in combat

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -353,7 +353,7 @@
                         <input type="text" class="attack-input line-input" name="attr_BasicAttackName" value="Attack" />
                         <input type="text" class="attack-damage line-input" name="attr_BasicAttackDamage" placeholder="1d6" />
                         <input type="text" class="attack-cost line-input" name="attr_BasicAttackCost" placeholder="" />
-                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;"></button>
+                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;;;@{WeaponName}"></button>
                     </div>
                     <input class="arrow-toggle" type="checkbox" />
                     <span class="arrow-label">&#9658;</span>
@@ -392,7 +392,7 @@
                         <input type="text" class="attack-input line-input" name="attr_BurstAttackName" value="Attack" />
                         <input type="text" class="attack-damage line-input" name="attr_BurstAttackDamage" placeholder="1d6" />
                         <input type="text" class="attack-cost line-input" name="attr_BurstAttackCost" placeholder="" />
-                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;burst"></button>
+                        <button name="roll_attack" class="attack-button" type="roll" value="!WeaponAttack;;burst;;@{WeaponName}"></button>
                     </div>
                     <input class="arrow-toggle" type="checkbox" />
                     <span class="arrow-label">&#9658;</span>
