--- a/character_sheet.html
+++ b/character_sheet.html
@@ -347,6 +347,10 @@
                     <span name="attr_WeaponEquip"></span>
                 </button>
 
+                <div>
+                    <input type="text" class="attack-properties line-input" name="attr_WeaponStats" placeholder="Bonus Stats"/>
+                </div>
+
                 <!-- Basic Attack -->
                 <div class="attack-line">
                     <div>
