CU-1xxuy71 add range to spell info on char

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -148,7 +148,8 @@
                 <span class="spell-top-row">   
                     <input type="text" class="spell-input line-input" name="attr_SpellName" value="Name"/>
                     <input type="hidden" name="attr_SpellID" value="Nothing here">
-                    <button class="spell-roll" name="roll_Spell" type="roll" value="!HSInit;;@{SpellID}"/>
+                    <input type="text" class="range-input line-input" name="attr_SpellRange" value="10ft"/>
+                    <button class="spell-roll hs-button" name="roll_Spell" type="roll" value="!HSInit;;@{SpellID}"/>
                 <!--</div>-->
                 </span>
                 <div class="spell-bottom-row">
@@ -200,6 +201,7 @@
                 <span class="spell-top-row">   
                     <input type="text" class="spell-input line-input" name="attr_SpellName" value="Name"/>
                     <input type="hidden" name="attr_SpellID" value="Nothing here">
+                    <input type="text" class="range-input line-input" name="attr_spellRange" value="10ft"/>
                     <button class="spell-roll t-button" name="roll_Spell" type="roll" value="!TalismanOptions;;@{SpellID}"/>
                 <!--</div>-->
                 </span>
