CU-1ymvfdx Add allowable failures to hs spells

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -345,6 +345,11 @@
                 <input type="hidden" name="attr_hsPerTurn_max" class="stat-input" value="4"/>
                 <input type="number" name="attr_hsPerTurn" class="stat-input" step="1" value="4" />
             </div>
+            <div class="hsfail-box stats-box">
+                <label class="stat-label">HS Fails</label>
+                <input type="hidden" name="attr_hsFail" class="stat-input" value="1"/>
+                <input type="number" name="attr_hsFail_label" class="stat-input" value="@{hsFail}" disabled />
+            </div>
         </div>
 
         <h3 class="traits-header">Weapons</h3>
